--- a/css/main.scss
+++ b/css/main.scss
@@ -87,6 +87,8 @@ body {
   width: 400px;
   margin-bottom: 40px;
   cursor: pointer; /* Ajout du curseur pour indiquer que c'est cliquable */
+  top: 20px;
+  left: 50%; /* Centrer horizontalement */
 }
 
 // Conteneur des boutons thématiques
