--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,8 @@ body {
   width: 400px;
   margin-bottom: 40px;
   cursor: pointer; /* Ajout du curseur pour indiquer que c'est cliquable */
+  top: 20px;
+  left: 50%; /* Centrer horizontalement */
 }
 
 .themes-buttons-container {
